--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.1",
-    "@supabase/supabase-js": "^2.50.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "buffer": "^6.0.3",
     "lucide-react": "^0.344.0",
+    "next-themes": "^0.2.1",
+    "process": "^0.11.10",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
