--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "react-twitter-embed": "^4.0.4"
+    "react-twitter-embed": "^4.0.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
